--- a/src/reduce/CMakeLists.txt
+++ b/src/reduce/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(reduce_v0 reduce_v0.cu)
-target_link_libraries(reduce_v0 PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
+add_executable(reduce_shared_memory reduce_shared_memory.cu)
+target_link_libraries(reduce_shared_memory PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_options(reduce_v0 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
+    target_compile_options(reduce_shared_memory PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
 endif()
