--- a/src/reduce/CMakeLists.txt
+++ b/src/reduce/CMakeLists.txt
@@ -9,3 +9,9 @@ target_link_libraries(reduce_warp_divergence PRIVATE CUDA::cudart ${CUDA_cublas_
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     target_compile_options(reduce_warp_divergence PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
 endif()
+
+add_executable(reduce_bank_conflict reduce_bank_conflict.cu)
+target_link_libraries(reduce_bank_conflict PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(reduce_bank_conflict PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
+endif()
