--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.20.0)
 project(cu_ops VERSION 0.1.0 LANGUAGES CUDA CXX C)
 
 find_package(CUDAToolkit)
-add_subdirectory(reduce)
-add_subdirectory(transpose)
+# add_subdirectory(reduce)
+# add_subdirectory(transpose)
+add_subdirectory(libtorch_example)
