--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,5 @@ project(cu_ops VERSION 0.1.0 LANGUAGES CUDA CXX C)
 find_package(CUDAToolkit)
 # add_subdirectory(reduce)
 # add_subdirectory(transpose)
-add_subdirectory(libtorch_example)
+# add_subdirectory(libtorch_example)
+add_subdirectory(flash_attention)
