add cmake for flash_attention

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,4 @@ find_package(CUDAToolkit)
 # add_subdirectory(reduce)
 # add_subdirectory(transpose)
 # add_subdirectory(libtorch_example)
-add_subdirectory(flash_attention)
+add_subdirectory(flash_attention_cc)
