refactor cmake with src, include, examples v0

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,16 +1,11 @@
 function(cu_ops_example_add_executable NAME)
   file(GLOB_RECURSE CU_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cu")
 
-  set(${result_var}
-      ${CPP_FILES}
-      PARENT_SCOPE)
-  message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}")
-  message(STATUS "NAME: ${NAME}")
-  message(STATUS "CU_FILES: ${CU_FILES}")
   add_executable(${NAME} ${CU_FILES})
 
   target_link_libraries(
-    ${NAME} PRIVATE $<$<BOOL:${CUTLASS_ENABLE_CUBLAS}>:nvidia::cublas> cuda)
+    ${NAME} PRIVATE $<$<BOOL:${CUTLASS_ENABLE_CUBLAS}>:nvidia::cublas> cuda
+                    cu_ops)
   target_link_libraries(${NAME} PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
 
   target_compile_features(${NAME} PUBLIC cxx_std_14)
@@ -20,6 +15,6 @@ function(cu_ops_example_add_executable NAME)
   endif()
 endfunction()
 
-foreach(EXAMPLE template)
+foreach(EXAMPLE template reduce)
   add_subdirectory(${EXAMPLE})
 endforeach()
