--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,14 @@
-cmake_minimum_required(VERSION 3.20.0)
-project(cu_ops VERSION 0.1.0 LANGUAGES CUDA CXX C)
+function(ops_add_library NAME)
+  file(GLOB_RECURSE CU_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${NAME}/*.cu")
 
-find_package(CUDAToolkit)
-add_subdirectory(reduce)
-add_subdirectory(transpose)
+  set(LIB_NAME cu_ops)
+
+  add_library(${LIB_NAME} SHARED ${CU_FILES})
+  set_target_properties(${LIB_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+  target_compile_features(${LIB_NAME} PUBLIC cxx_std_14)
+  target_link_libraries(${LIB_NAME} PUBLIC -lcudart -lcublas)
+endfunction()
+
+foreach(OP reduce)
+  ops_add_library(${OP})
+endforeach()
