--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,10 @@ set(CMAKE_CUDA_ARCHITECTURES
     CACHE STRING "" FORCE)
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/CUDA.cmake)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+add_subdirectory(src)
 add_subdirectory(examples)
