add common files

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CU_OPS_EXAMPLES_COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/common)
+
 function(cu_ops_example_add_executable NAME)
   file(GLOB_RECURSE CU_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cu")
 
@@ -9,6 +11,9 @@ function(cu_ops_example_add_executable NAME)
   target_link_libraries(${NAME} PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
 
   target_compile_features(${NAME} PUBLIC cxx_std_14)
+
+  target_include_directories(${NAME}
+                             PRIVATE ${CU_OPS_EXAMPLES_COMMON_SOURCE_DIR})
 
   if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     target_compile_options(${NAME} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
