--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,8 +3,7 @@ set(CU_OPS_EXAMPLES_COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/common)
 function(cu_ops_example_add_executable NAME)
   file(GLOB_RECURSE CU_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cu")
 
-  add_executable(${NAME} ${CU_FILES} ${ZLIB_LIBRARIES}
-                         ${CU_OPS_EXAMPLES_COMMON_SOURCE_DIR}/cnpy.cpp)
+  add_executable(${NAME} ${CU_FILES} ${ZLIB_LIBRARIES})
 
   target_link_libraries(
     ${NAME} PRIVATE $<$<BOOL:${CUTLASS_ENABLE_CUBLAS}>:nvidia::cublas> cuda
