move common to main dir

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CU_OPS_EXAMPLES_COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/common)
+# set(CU_OPS_EXAMPLES_COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/common)
 
 function(cu_ops_example_add_executable NAME)
   file(GLOB_RECURSE CU_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cu")
@@ -13,15 +13,13 @@ function(cu_ops_example_add_executable NAME)
 
   target_compile_features(${NAME} PUBLIC cxx_std_14)
 
-  target_include_directories(${NAME}
-                             PRIVATE ${CU_OPS_EXAMPLES_COMMON_SOURCE_DIR})
+  # target_include_directories(${NAME} PRIVATE
+  # ${CU_OPS_EXAMPLES_COMMON_SOURCE_DIR})
 
   if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     target_compile_options(${NAME} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
   endif()
 endfunction()
-
-add_subdirectory(common)
 
 foreach(EXAMPLE template reduce transpose)
   add_subdirectory(${EXAMPLE})
