--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.30 FATAL_ERROR)
-set(CMAKE_CUDA_ARCHITECTURES 89)
 
 project(CuOps LANGUAGES CXX CUDA)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_ARCHITECTURES
     89
     CACHE STRING "" FORCE)
